--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="heroImage">
-            <img src="assets/aladdin2.jpeg"></img>
+            <img src="assets/IMG_2162.jpg"></img>
         </div> <!-- close heroImage class -->
         <div class="heroText">
             <div class="heroTextTop">
