--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,9 @@
        </div> <!-- Close Project Card 1 -->
        
        <div class="projectCard">
-           <h2>Image Gallery</h2>
+           <h2>My Gallery</h2>
            <p><em>Click image below to see project</em></p>
-           <a href="https://csf2223.github.io/studentportfolio-NapoleoneJack/"><img src="assets/sea-turtle-547162_1920.jpg"></img></a>
+           <a href="https://csf2223.github.io/studentportfolio-NapoleoneJack/"><img src="assets/baseballstadiums.jpeg"></img></a>
            <p>This project is a static website Image Gallery of Hawaii</p>
            <p><em>Course: CS Foundations</em></p>
            <div class="projectIcons">
@@ -78,9 +78,9 @@
        </div> <!-- Close Project Card 2 -->
        
        <div class="projectCard">
-           <h2>Image Gallery</h2>
+           <h2>Student Portfolio</h2>
            <p><em>Click image below to see project</em></p>
-           <a href="https://csf2223.github.io/studentportfolio-NapoleoneJack/"><img src="assets/sea-turtle-547162_1920.jpg"></img></a>
+           <a href="https://csf2223.github.io/studentportfolio-NapoleoneJack/"><img src="assets/aladdin.jpeg"></img></a>
            <p>This project is a static website Image Gallery of Hawaii</p>
            <p><em>Course: CS Foundations</em></p>
            <div class="projectIcons">
