--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navitgation Menu -->
     <nav class="navbar">
         <!-- logo -->
-        <div class="logo">Jack</div>
+        <div class="logo">Jack Napoleone</div>
         <!-- hamburger toggle -->
         <a href="#" class="toggle-button">
             <span class="bar"></span>
@@ -40,7 +40,7 @@
             <div class="heroTextTop">
                 <h3>Hi!</h3>
                 <h3>My Name is</h3>
-                <h1 class="heroName"><em>Jack</em></h1>
+                <h1 class="heroName"><em>Jack Napoleone</em></h1>
             </div> <!-- close heroTextTop class -->
             <div class="heroTextBottom">
                 <h4>Welcome to my </h4>
